@@ -4,6 +4,9 @@ Backward compatible changes:
 
 BUGFIXES:
 
+  ZOOKEEPER-2375: Prevent multiple initialization of login object in each
+  ZooKeeperSaslClient instance (yuemeng via rakeshr)
+
   ZOOKEEPER-602: log all exceptions not caught by ZK threads
   (Rakesh R via rgs)
 
